--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ body{
 .hero-banner{width:100%;overflow:hidden;background:#000}
 .hero-banner img{
   width:100%;
-  height:52vh;              /* adjust height */
-  object-fit:cover;
+  height:auto;              /* adjust height */
   display:block;
 }
 
